<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/config"
                android:textSize="40dp"
                android:layout_gravity="center"/>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Velocidad"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_velocidad"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_velocidad"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barraNivel"
                    android:orientation="horizontal">
                    <SeekBar
                        android:id="@+id/seekBarVelocidad"
                        android:layout_width="226dp"
                        android:layout_height="29dp"
                        android:defaultValue="4"
                        android:max="10" />

                    <TextView
                        android:id="@+id/textoNivelDificultad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Tipo_Piezas"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_piezas"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_piezas"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/piezasImagenes"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tipo1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tipo 1"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="227dp"
                        android:src="@drawable/tipo2" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tipo 2"
                        android:textSize="20sp" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tipo3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tipo 3 \n"
                        android:textSize="20sp" />
                </LinearLayout>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seleccion_tipo_piezas"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkJuegoDificil"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_nuevoModo"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_nuevo_modo"/>
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id = "@+id/casillaModoNuevo"
                    android:summaryOff = "Swithc off"
                    android:summaryOn="Switch on"
                    android:checked="false"
                    android:text = "Jugar Nueva Funcionalidad: PIEZAS CADA 30 seg"
                    android:gravity="left"/>

            </LinearLayout>


            <Button
                android:id="@+id/botonInicioPartida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>